--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
                   Select the task
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" onclick="updateButton('Study')" href="#">Study</a>
-                  <a class="dropdown-item" onclick="updateButton('Working')" href="#">Working</a>
-                  <a class="dropdown-item" onclick="updateButton('Exercise')" href="#">Exercise</a>
+                  <a class="dropdown-item" onclick="updateButton('U & I')" href="#">Urgent & Important</a>
+                  <a class="dropdown-item" onclick="updateButton('U & UI')" href="#">Urgent & Unimportant</a>
+                  <a class="dropdown-item" onclick="updateButton('Not U & I')" href="#">Not Urgent & Important</a> 
+                  <a class="dropdown-item" onclick="updateButton('Not U & UI')" href="#">Not Urgent & Unimportant</a>
                 </div>
                 <div class="input-group">
                     <div class="input-group-prepend">
